# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .logging.dev.yaml  .logging.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  cli.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
migrations/: env.py  utils.py
migrations/versions/: 2024_03_01_initial.py
seed/: 001.init.json
src/: bootstrap.py  main.py  middleware.py  router.py  settings.py  swagger.py
src/apps/auth/: auth.py  depends.py  models.py  pagination.py  router.py  schemas.py
src/apps/auth/managers/: __init__.py  user_manager.py
src/apps/auth/repositories/: __init__.py  user_repository.py
src/apps/healthcheck/: __init__.py  router.py  schemas.py
src/apps/users/: depends.py  enums.py  router.py
src/apps/users/repositories/: __init__.py  users.py
src/apps/users/schemas/: __init__.py  users.py
src/apps/users/services/: __init__.py  users.py
src/apps/users/use_cases/: __init__.py  users.py
src/cli/: app.py  bootstrap.py  utils.py
src/cli/commands/: hello.py
src/core/: db.py  depends.py  enums.py  loggers.py  models.py  pagination.py  schemas.py  use_cases.py
src/core/repositories/: __init__.py  base_repository.py
src/core/services/: __init__.py
src/core/services/cache/: __init__.py  inmemory_cache.py  redis_cache.py
src/core/services/cryptography/: __init__.py  aes.py
src/core/services/email/: __init__.py  smtp.py
src/core/services/storage/: __init__.py  ftp_storage.py  local_storage.py  reader.py  s3_storage.py  schemas.py
src/core/services/stream/: __init__.py  schemas.py
src/core/utils/: exceptions.py  run_in_processpool.py  run_in_threadpool.py  ssl_context.py  string.py  time.py
src/entrypoints/: rest.py
src/tools/: __init__.py  utils.py
src/tools/core/: cryptography.py
src/tools/db/: loaddata.py
tests/: conftest.py  settings_test.py
tests/apps/healthcheck/: test_router.py
tests/core/: test_utils.py
tests/core/services/: conftest.py  test_cache.py  test_storage.py
