[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI boilerplate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "fastapi-cache2[redis]>=0.2.2",
    "httpx>=0.28.1",
    "miniopy-async>=1.21.1",
    "psycopg[binary,pool]>=3.2.3",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.4",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "typer>=0.15.1",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "docformatter>=1.7.5",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-redis>=4.6.0.20241004",
]

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
line-length = 120
extend-select = ["Q"]

src = ["src", "tests"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

# exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

target-version = "py311"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []


[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"
